[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longcat2api"
dynamic = ["version"]
description = "LongCat Web reverse proxy with OpenAI-compatible image and video endpoints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "carzygod" },
]
keywords = ["longcat", "openai", "api", "reverse-proxy", "playwright"]
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.100",
    "httpx>=0.27",
    "playwright>=1.49",
    "playwright-stealth>=1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "uvicorn>=0.20",
]

[project.urls]
Homepage = "https://github.com/carzygod/longcat2api"
Repository = "https://github.com/carzygod/longcat2api"
Issues = "https://github.com/carzygod/longcat2api/issues"

[project.scripts]
longcat2api = "longcat2api.__main__:main"

[tool.hatch.version]
path = "longcat2api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["longcat2api"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

